@@ -45,9 +45,19 @@ include src/Makemodule.am
 include doc/Makemodule.am
 
 # Stuff from this directory.
-pkgconfig_DATA += libmpg123.pc libout123.pc libsyn123.pc
+if BUILD_LIBMPG123
+pkgconfig_DATA += libmpg123.pc
+endif
+if BUILD_LIBOUT123
+pkgconfig_DATA += libout123.pc
+endif
+if BUILD_LIBSYN123
+pkgconfig_DATA += libsyn123.pc
+endif
 
+if BUILD_PROGRAMS
 dist_man_MANS += man1/mpg123.1 man1/out123.1
+endif
 
 # mpg123.spec is autogenerated but needs to be present in tarball!
 EXTRA_DIST += \
