@@ -18,9 +18,13 @@ src_libmpg123_calctables_LDADD = @LIBM@
 # Necessary?
 #CLEANFILES += src/libmpg123/*.a
 
+if BUILD_LIBMPG123
 lib_LTLIBRARIES += src/libmpg123/libmpg123.la
 include_HEADERS += src/libmpg123/mpg123.h
+endif
+if NEED_FMT123
 include_HEADERS += src/libmpg123/fmt123.h
+endif
 
 src_libmpg123_libmpg123_la_CFLAGS = @LIB_CFLAGS@
 
